--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,16 +1,26 @@
-html,
-body {
-  padding: 0;
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+/* Tailwind kullanmak için kullanılır */
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+
+/* Sayfanın heryerine etki eden bölge */
+@layer base{
+  body{
+    @apply bg-black
+  }
 }
 
-a {
-  color: inherit;
-  text-decoration: none;
-}
 
-* {
-  box-sizing: border-box;
+/* class component oluşturma */
+@layer components {
+  .hoverAnimation{
+    @apply hover:bg-[#d9d9d9] hover:bg-opacity-10 rounded-full
+    cursor-pointer w-[52px] h-[52px] xl:w-auto xl:h-auto xl:py-3
+    xl:px-4 transition duration-200 ease-out;
+  }
+
+  .icon{
+    @apply cursor-pointer w-9 h-9 hover:bg-[#1d9bf0] hover:bg-opacity-10 flex items-center justify-center rounded-full transition ease-out;
+  }
 }
